--- a/pom.xml
+++ b/pom.xml
@@ -1,118 +1,228 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dbsystel.tibco.plugins</groupId>
-  <artifactId>tibco-ear-plugin</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>maven-plugin</packaging>
+	<artifactId>tibco-ear-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
 
-  <name>tibco-ear-plugin Maven Plugin</name>
+	<parent>
+		<groupId>com.dbsystel.platform.dev</groupId>
+		<artifactId>dev-platform-parent</artifactId>
+		<version>1.0.1</version>
+		<relativePath>../dev-platform-parent/pom.xml</relativePath>
+	</parent>
 
-  <!-- FIXME change it to the project's website -->
-  <url>https://github.com/MarcusPilz/tibco-ear-plugin.git</url>
-  
-  <scm>
-		<url>https://github.com/MarcusPilz/tibco-ear-plugin.git/tree/${project.scm.tag}</url>
-		<developerConnection>scm:git:https://github.com/MarcusPilz/tibco-ear-plugin.git</developerConnection>
-		<connection>scm:git:https://github.com/MarcusPilz/tibco-ear-plugin.git</connection>
+	<name>tibco-ear-plugin Maven Plugin</name>
+	<url>https://swd.noncd.rz.db.de/svn/dbe-s42-dev/websites/devplatform/docs/${project.version}/${project.artifactId}</url>
+	<description>Generates the projlib or the ear.</description>
+
+	<!-- PROPERTIES -->
+	<properties>
+		<devplatform.site.path>${project.artifactId}</devplatform.site.path>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugin-tools</groupId>
+			<artifactId>maven-plugin-annotations</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-descriptor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+			<version>3.0.22</version>
+		</dependency>
+
+		<!-- LOGGING -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.19</version>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.dbsystel.platform.dev</groupId>
+			<artifactId>dev-platform-cli</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.dbsystel.platform.dev</groupId>
+			<artifactId>dev-platform-core</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.shared/maven-verifier -->
+		<dependency>
+			<groupId>org.apache.maven.shared</groupId>
+			<artifactId>maven-verifier</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/xmlunit/xmlunit -->
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<configuration>
+					<goalPrefix>tibco-ear</goalPrefix>					
+				</configuration>				
+			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.plexus</groupId>
+				<artifactId>plexus-component-metadata</artifactId>								
+			</plugin>
+			
+		</plugins>
+	</build>
+	
+	<!-- ENVIRONMENT SETTINGS -->
+	<!-- SCM -->
+	<scm>
+		<connection>${scm.project.connection}</connection>
+		<developerConnection>${scm.project.connection}/trunk</developerConnection>
 		<tag>HEAD</tag>
+		<url>https://swd.noncd.rz.db.de/svn/dbe-s42-dev/devplatform/tibco-ear-plugin</url>
 	</scm>
+	<!-- PREREQUISITES -->
+	<prerequisites>
+		<maven>3.3.9</maven>
+	</prerequisites>
+	<!-- Distribution Management -->
+	<distributionManagement>
+		<repository>
+			<id>step42</id>
+			<name>Releases</name>
+			<url>http://twix16-201v.linux.rz.db.de:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>step42</id>
+			<name>Snapshots</name>
+			<url>http://twix16-201v.linux.rz.db.de:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+		<site>
+            <id>swd.noncd.rz.db.de</id>
+            <url>${project.url}</url>
+        </site>
+	</distributionManagement>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-plugin-api</artifactId>
-      <version>2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugin-tools</groupId>
-      <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.2</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>3.0.8</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-plugin-plugin</artifactId>
-        <version>3.2</version>
-        <configuration>
-          <goalPrefix>tibco-ear-plugin</goalPrefix>
-          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-        </configuration>
-        <executions>
-          <execution>
-            <id>mojo-descriptor</id>
-            <goals>
-              <goal>descriptor</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>help-goal</id>
-            <goals>
-              <goal>helpmojo</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>run-its</id>
-      <build>
-
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-invoker-plugin</artifactId>
-            <version>1.7</version>
-            <configuration>
-              <debug>true</debug>
-              <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-              <pomIncludes>
-                <pomInclude>*/pom.xml</pomInclude>
-              </pomIncludes>
-              <postBuildHookScript>verify</postBuildHookScript>
-              <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-              <settingsFile>src/it/settings.xml</settingsFile>
-              <goals>
-                <goal>clean</goal>
-                <goal>test-compile</goal>
-              </goals>
-            </configuration>
-            <executions>
-              <execution>
-                <id>integration-test</id>
-                <goals>
-                  <goal>install</goal>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-
-      </build>
-    </profile>
-  </profiles>
+	<!-- PROFILES -->
+	<profiles>
+		<profile>
+			<id>run-its</id>
+			<properties>
+				<localRepositoryPath>${project.build.testOutputDirectory}/m2repo</localRepositoryPath>
+				<localSnapshotRepositoryPath>${project.build.testOutputDirectory}/m2snapshots</localSnapshotReposhtoryPath?
+		</prordrties>
+			<build>
+			<reso5rces?
+					<resnurce>					<dire#tory>src/main/filtered=reso}2ces</directory>
+						<filterinç>true</filtering>
+				</sesourc%>
+			<¯resources6
+				<testReqources>
+					<4estRermeRce~						<directoRy>sòs/tust/rerouóces</lírebtory>
+						<filtering>truå</vilterine>
+				™	<includes>
+					<includí>**/pom.xml</incnude>
+					</inclu`es>
+					/testResource>
+I			<testResource>
+			I		<direktor[>srcotest/rewnurces¼oeirectory>	
+				<filtering>false</filtering>
+						<excludes>
+							<exclude>**/pom.xml</exclude>
+						</excludes>
+					</testResource>
+					<testResource>
+						<directory>src/test/filtered-resources</directory>
+						<filtering>true</filtering>
+					</testResource>
+				</testResources>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-resources-plugin</artifactId>
+							<configuration>
+								<escapeString>\</escapeString>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-invoker-plugin</artifactId>
+						<configuration>
+							<!-- NOTE: Must be synced with the repo path used by AbstractEarPluginIT -->
+							<localRepositoryPath>${localRepositoryPath}</localRepositoryPath>
+							<goals>
+								<goal>clean</goal>
+								<goal>package</goal>
+							</goals>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+									<systemPropertyVariables
+										combine.children="append">
+										<maven.home>${maven.home}</maven.home>
+										<userlocalRepository>${settings.localRepository}</userlocalRepository>
+										<localRepositoryPath>${localRepositoryPath}</localRepositoryPath>
+										<java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+										<basedirectory>${basedir}</basedirectory>
+									</systemPropertyVariables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
