--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dbsystel.tibco.plugins.it</groupId>
+  <groupId>com.dbsystel.maven.plugins.tibco.it</groupId>
   <artifactId>simple-it</artifactId>
   <version>1.0-SNAPSHOT</version>
 
